# iccad2020c

./: CMakeLists.txt
include/: vcd.hpp
src/: parser.cxx
test/: CMakeLists.txt  mux_kernel.cl  test_kernel.cl  test_opencl.cxx  test_parse_vcd.cxx  test_simulation.cxx
